language/tests/error/TypeError02.sl
def main() {  
  if ("4") { }  
}  
